# gismo

cmake/: AddCXXCompileOptions.cmake  gsConfig.cmake
docker/ubuntu16.04/: Dockerfile
docker/ubuntu20.04/: Dockerfile
examples/: gsDPatch_example.cpp  gsGeometryTest.cpp  kirchhoff-Love_example.cpp
extensions/gsCoDiPack/: CMakeLists.txt  README.md
extensions/gsOpenCascade/: CMakeLists.txt
extensions/gsUnum/: CMakeLists.txt  exprtk_unum_posit_adaptor.h  exprtk_unum_posit_adaptor.hpp  gsUnum.h
src/gsCore/: gsForwardDeclarations.h
src/gsHSplines/: gsHTensorBasis.h  gsHTensorBasis.hpp
src/gsMatrix/: gsVector.h
src/gsModeling/: gsCrossApPatch.h  gsCrossApPatch.hpp
src/gsNurbs/: gsTensorBSpline.h  gsTensorBSpline.hpp
src/gsPde/: gsBoundaryConditions.h
src/gsTensor/: gsTensorTools.h
